Decrease photos if mobile

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </section>
                         <section class="photos">
                             <div class="sub-header">~/../about/artwork</div>
-                            <p class="quote">Look and think before opening the shutter. The heart and mind are the true lens of the camera.</p>
+                            <p class="quote">Art enables us to find ourselves and lose ourselves at the same time.</p>
                             <div id="app">
                                 <div v-if="username && !loading">
                                     <template v-if="grams.length > 0">
@@ -135,7 +135,7 @@
                     <section class="projects">
                         <section class="project">
                             <div class="sub-header">~/../projects/gistpush</div>
-                            <p>Npm module/command line tool to add your files to gist easily. There is no need for you to open up your account to upload a gist. Just write your code/content in a file and name the file as you would in the gist. Then upload it to your account as publicly or privately accessible using the command line.</p>
+                            <p>Npm module/command line tool to add your files to gist easily. There is no need for you to open up your account to upload a gist. Just write your code/content in a file and name the file as you would in the gist. Then upload it to your account (publicly or privately accessible) using the command line.</p>
                             <a class="external-link" href="https://github.com/sr6033/gistpush" target="_blank">
                                 Know more
                                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
