Add social media header img

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Open Graph general (Facebook, Pinterest & Google+) -->
         <meta name="og:title" content="Shubham Rath">
         <meta property="og:title" content="Shubham Rath">
-        <meta name="og:image" content="img/og-image.jpg">
+        <meta name="og:image" content="img/og-image.png">
         <meta name="og:url" content="">
         <meta name="og:site_name" content="Shubham Rath">
         <meta property="og:description" content=""/>
