--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <meta name="og:image" content="img/og-image.png">
         <meta name="og:url" content="">
         <meta name="og:site_name" content="Shubham Rath">
-        <meta property="og:description" content=""/>
+        <meta property="og:description" content="Software Engineer, Artist"/>
     </head>
     <body>
         <ul class="navigation">
