--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Open Graph general (Facebook, Pinterest & Google+) -->
         <meta name="og:title" content="Shubham Rath">
         <meta property="og:title" content="Shubham Rath">
-        <meta name="og:image" content="img/ogimage.png">
+        <meta name="og:image" content="img/ogimage.jpg">
         <meta name="og:url" content="https://shubhamrath.dev/">
         <meta name="og:site_name" content="Shubham Rath">
         <meta property="og:description" content="Software Engineer, Artist"/>
